# underwater_map_construction

./: .gitignore  .gitignore_global  LICENSE  README.md
MLSMap_manager/: CMakeLists.txt  package.xml
charle_control/: CMakeLists.txt  package.xml
charle_control/config/: charle_control.yaml
charle_control/launch/: charle_control.launch
charle_description/: CMakeLists.txt  CMakeLists.txt~  LaserSonar.xmi  package.xml  package.xml~  urdf.rviz
charle_description/include/: diffdrive_plugin.h  imaging_sonar_plugin.h  laserToSonar.h  laser_imaging_sonar_plugin.h  sensor_model.h
charle_description/launch/: charle_display.launch  charle_display.launch~  charle_display_static.launch  charle_display_static.launch~  charle_gazebo.launch~
charle_description/src/: diffdrive_plugin.cpp  imaging_sonar_plugin.cpp  laserToSonar.cpp  laser_imaging_sonar_plugin.cpp  state_publisher.cpp
charle_description/urdf/: AVORA_body_stl.STL  AVORA_head_stl.STL  AVORA_servo_head_stl.STL  AVORA_sonar_stl.STL  Untitled Document 1  charle.gazebo  charle.urdf  charle.xacro  charle_sonarRay.gazebo  myfirst.gv  urdf.vcg
charle_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
charle_gazebo/launch/: charle_gazebo.launch  charle_gazebo.launch~  charle_world.launch  taliarte_collada_world.launch  taliarte_collada_world.launch~
charle_gazebo/worlds/: empty.world  taliarte.world  taliarte.world~  taliarte_rviz.dae  test.world~  walls.world  willowgarage.world
driver_depth/: CMakeLists.txt  package.xml
driver_depth/include/: driver_depth.h
driver_depth/src/: driver_depth.cpp
gazebo_imaging_sonar/: CMakeLists.txt
gazebo_imaging_sonar/include/: ImagingSonar.hh
gazebo_imaging_sonar/msgs/: CMakeLists.txt  CMakeLists.txt~  sonar_scan_line.proto  sonar_scan_line_stamped.proto
gazebo_imaging_sonar/src/: ImagingSonar.cc
gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt  CMakeLists.txt~  package.xml
gazebo_ros_pkgs/gazebo_plugins/include/gazebo_plugins/: charle_sonar_plugin.h  charle_sonar_plugin.h~  gazebo_ros_sonar.h
gazebo_ros_pkgs/gazebo_plugins/src/: charle_sonar_plugin.cpp  gazebo_ros_sonar.cpp
hydro-gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt  package.xml
hydro-gazebo_ros_pkgs/gazebo_plugins/include/gazebo_plugins/: charle_sonar_plugin.h
inertial_navigation/: CMakeLists.txt  package.xml
inertial_navigation/include/: ins_core.h
inertial_navigation/launch/: start_ins.launch
inertial_navigation/src/: ins_core.cpp
kdtree-master/: Makefile
mlsm_manager/: CMakeLists.txt  CMakeLists.txt.user.6170340.2.5pre1  package.xml
mlsm_manager/include/: ICP.h  MLSM.h  MLSMCore.h  QuadGrid.h  kdtree.h
mlsm_manager/launch/: MLSM.launch  MLSM.launch~  ekf-launch  ekf.launch
mlsm_manager/src/: ICP.cpp  MLSM.cpp  MLSMCore.cpp  QuadGrid.cpp  kdtree.c
mlsm_manager/yaml/: MLSM_Core_default.yaml  MLSM_Core_default.yaml~
sonar_control/: CMakeLists.txt  package.xml
sonar_control/include/: SonarControl.h
sonar_control/launch/: SonarControl.launch
sonar_control/src/: SonarControl.cpp
sonar_control/srv/: requestBehaviour.srv
sonar_processing/: CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt~  SonarToCloud.launch~  SonarToCloud_default.yaml  SonarToCloud_default.yaml~  package.xml
sonar_processing/include/: 2DProcessor.h  OutlierRemover.h  ScanProcessor.h  SonarToCloud.h  Thresholder.h  Wall2DDetector.h
sonar_processing/launch/: OutlierRemover.launch  OutlierRemover.launch~  SonarToCloud.launch  SonarToCloud.launch~  Thresholder.launch  Wall2DDetector.launch  processing_nodelets.launch  processing_nodelets.launch~  sonar_processing.launch
sonar_processing/plugins/: OutlierRemover_nodelet_plugins.xml  OutlierRemover_nodelet_plugins.xml~  SonarToCloud_nodelet_plugins.xml  Thresholder_nodelet_plugins.xml  Thresholder_nodelet_plugins.xml~  Wall2DDetector_nodelet_plugins.xml
sonar_processing/src/: OutlierRemover.cpp  ScanProcessor.cpp  SonarScanProcess2D.cpp  SonarToCloud.cpp  Thresholder.cpp  TypeDefinitions.cpp  Wall2DDetector.cpp
sonar_processing/yaml/: OutlierRemover_default.yaml  SonarToCloud_default.yaml  SonarToCloud_default.yaml~  Thresholder_default.yaml  Wall2DDetector_default.yaml
sonar_simulator/: CMakeLists.txt  package.xml
sonar_simulator/include/: ScanProcessor.h~  SonarSimulator.h  SonarSimulator.h~
sonar_simulator/src/: CloudSimulator.cpp  ScanProcessor.cpp~  SonarSimulator.cpp
type_definitions/: CMakeLists.txt  package.xml  package.xml~
type_definitions/include/: TypeDefinitions.h
type_definitions/src/: TypeDefinitions.cpp
underwater_map_construction/: CMakeLists.txt  package.xml
